[gd_scene load_steps=5 format=2]

[ext_resource path="res://Puzzle Elements/Scripts/Gate.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tilesets/Tiles_32.tres" type="TileSet" id=2]
[ext_resource path="res://Assets/Tilesets/Tiles_16.tres" type="TileSet" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 16 )

[node name="Gate" type="Node2D" groups=["puzzle_signal_listeners"]]
script = ExtResource( 1 )

[node name="GateMask" type="ColorRect" parent="."]
margin_left = -32.0
margin_right = 32.0
margin_bottom = 64.0
rect_clip_content = true
color = Color( 1, 1, 1, 0 )

[node name="GateBars" type="TileMap" parent="GateMask"]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 0, 196611 )

[node name="GateColourIndicator" type="TileMap" parent="GateMask"]
modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 2, 2 )
z_index = 1
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -1, 1, 4, -65536, 1, 65537, -65535, 1, 65537, -65534, 1, 4, 0, 1, 0, 1, 1, 2 )

[node name="GateCollision" type="StaticBody2D" parent="."]
scale = Vector2( 2, 2 )

[node name="GateColShape" type="CollisionShape2D" parent="GateCollision"]
position = Vector2( 0, 16 )
shape = SubResource( 1 )
